Update comment for Management section in index.html

--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ The Winter School bridged academia and industry, enhancing participants’ skill
         </div>
       </div>
 
-      <!--Management Raw-->
+      <!--ROW 6: MANAGEMENT-->
       <div class="team-row">
         <div class="row-header">
           <h3 class="row-title">Management</h3>
