Local changes to index.html

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
         <div class="hero-badge">RBU Student chapter</div>
 
        <h1 class="hero-title">
-  Association for Computing Machinery
+  Association for Computing Machinery   (2025-26)
 </h1>
 
 
         <p class="hero-description">
-          Join the largest community of computing professionals and students at RBU.
+        The largest community of computing professionals and students at RBU.
           Engage in cutting-edge workshops, hackathons, and networking opportunities
           that shape the future of technology.
         </p>
@@ -1264,14 +1264,7 @@ The Winter School bridged academia and industry, enhancing participants’ skill
             </div>
           </div>
 
-          <!-- Newsletter -->
-          <form class="newsletter-form">
-            <input type="email" class="newsletter-input" placeholder="Your email" required>
-            <button type="submit" class="newsletter-btn">Subscribe</button>
-          </form>
-        </div>
-
-      </div>
+         
 
       <!-- Footer Bottom -->
       <div class="footer-bottom">
